--- a/gitHubAlexa/lambda-pack/package.json
+++ b/gitHubAlexa/lambda-pack/package.json
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "alexa-sdk": "^1.0.17",
-    "request": "^2.83.0",
+    "request": "^2.83.0"
   }
 }
