--- a/gitHubLex/package.json
+++ b/gitHubLex/package.json
@@ -2,13 +2,14 @@
   "name": "githublex",
   "version": "1.0.0",
   "description": "",
-  "main": "lex-basic.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
